[#1835] Stash
