# backend/server/restservice/zones.go
@@ -30,14 +30,14 @@ func (r *RestAPI) GetZones(ctx context.Context, params dns.GetZonesParams) middl
 	}
 	// Apply paging parameters and zone-specific filters.
 	filter := &dbmodel.GetZonesFilter{
-		AppID:   params.AppID,
-		AppType: params.AppType,
-		Class:   params.Class,
-		RPZ:     params.Rpz,
-		Serial:  params.Serial,
-		Text:    params.Text,
-		Offset:  storkutil.Ptr(offset),
-		Limit:   storkutil.Ptr(limit),
+		DaemonID:   params.DaemonID,
+		DaemonName: params.DaemonName,
+		Class:      params.Class,
+		RPZ:        params.Rpz,
+		Serial:     params.Serial,
+		Text:       params.Text,
+		Offset:     storkutil.Ptr(offset),
+		Limit:      storkutil.Ptr(limit),
 	}
 	for _, zoneType := range params.ZoneType {
 		filter.EnableZoneType(dbmodel.ZoneType(zoneType))
